getId instead of threadId