@@ -1,6 +1,6 @@
 class Threads extends Thread {
     public void run() {
-        System.out.println("Thread " + Thread.currentThread().threadId() + " is running.");
+        System.out.println("Thread " + Thread.currentThread().getId() + " is running.");
     }
 }
 
